@@ -4,7 +4,7 @@ use warnings;
 
 use Test::More;
 use Math::Prime::Util::GMP qw/gcd lcm kronecker is_power valuation invmod
-                              binomial/;
+                              binomial gcdext vecsum/;
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
 
 my @gcds = (
@@ -119,12 +119,44 @@ my @binomials = (
  [  0,-1, 0 ],
 );
 
+my @gcdexts = (
+  [ [0, 28], [0, 1,28] ],
+  [ [ 28,0], [ 1,0,28] ],
+  [ [0,-28], [0,-1,28] ],
+  [ [-28,0], [-1,0,28] ],
+  [ [ 3706259912, 1223661804], [ 123862139,-375156991, 4] ],
+  [ [ 3706259912,-1223661804], [ 123862139, 375156991, 4] ],
+  [ [-3706259912, 1223661804], [-123862139,-375156991, 4] ],
+  [ [-3706259912,-1223661804], [-123862139, 375156991, 4] ],
+  [ [22,242], [1, 0, 22] ],
+  [ [2731583792,3028241442], [-187089956, 168761937, 2] ],
+  [ [42272720,12439910], [-21984, 74705, 70] ],
+  [ ["10139483024654235947","8030280778952246347"], ["-2715309548282941287","3428502169395958570",1] ],
+);
+
+my @vecsums = (
+  [ 0 ],
+  [ -1, -1 ],
+  [ 0, 1,-1 ],
+  [ 0, -1,1 ],
+  [ 0, -1,1 ],
+  [ 0, -2147483648,2147483648 ],
+  [ 0, "-4294967296","4294967296" ],
+  [ 0, "-9223372036854775808","9223372036854775808" ],
+  [ "18446744073709551615", "18446744073709551615","-18446744073709551615","18446744073709551615" ],
+  [ "55340232221128654848", "18446744073709551616","18446744073709551616","18446744073709551616" ],
+  [ "18446744073709620400", 18446744073709540400, (1000) x 80 ],
+  [ "22229615424432722482764646042115836201380906995100292325888852211992579", "8940560560432415123818915720822415267807123681474252424566821897853531", "7778547618243732438765515250718016989143156212607337512983395245244477", "2189527014402679437989261998352299668199802723705390949617417617818071", "-3503124593441728232550096334002786135023", "3320980231353895482190953072226607400824266105545861535055220237211523" ],
+);
+
 plan tests => scalar(@gcds)
             + scalar(@lcms)
             + scalar(@kroneckers)
             + scalar(@valuations)
             + scalar(@invmods)
             + 2 + scalar(@binomials)
+            + scalar(@gcdexts)
+            + scalar(@vecsums)
             + 3 + 3 + 1 + 5;
 
 foreach my $garg (@gcds) {
@@ -166,6 +198,16 @@ is_deeply( [map { binomial(-10, $_) } -15 .. 15],
            [qw/-2002 715 -220 55 -10 1 0 0 0 0 0 0 0 0 0 1 -10 55 -220 715 -2002 5005 -11440 24310 -48620 92378 -167960 293930 -497420 817190 -1307504/],
            "binomial(-10,n) for n in -15 .. 15" );
 
+foreach my $garg (@gcdexts) {
+  my($aref, $eref) = @$garg;
+  my($x,$y) = @$aref;
+  is_deeply( [gcdext($x,$y)], $eref, "gcdext($x,$y) = [@$eref]" );
+}
+
+foreach my $r (@vecsums) {
+  my($exp, @vals) = @$r;
+  is( vecsum(@vals), $exp, "vecsum(@vals) = $exp" );
+}
 
 is( gcd("921166566073002915606255698642","1168315374100658224561074758384","951943731056111403092536868444"), 14, "gcd(a,b,c)" );
 is( gcd("1214969109355385138343690512057521757303400673155500334102084","1112036111724848964580068879654799564977409491290450115714228"), 42996, "gcd(a,b)" );
